Add embed button

--- a/front/src/locales/en_US.json
+++ b/front/src/locales/en_US.json
@@ -4510,7 +4510,9 @@
       "edit": "Edit",
       "delete": "Delete",
       "search": "Search",
-      "clear": "Clear"
+      "clear": "Clear",
+      "embed": "Embed",
+      "submit": "Submit"
     }
   }
 }
